src/main/resources/antlr/uncertain_agentspeak/UncertainAgentspeakParser.java
// Generated from /Users/aidanscannell/Google Drive/Bristol PG/Academic/Research Project/uncertain-agentspeak/src/main/resources/antlr/UncertainAgentspeak.g4 by ANTLR 4.7
package main.resources.antlr.uncertain_agentspeak;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UncertainAgentspeakParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, CONTEXT=8, ACTIONS=9, 
		ACTION_SEPERATOR=10, ADD_EVENT_OPRTATOR=11, DELETE_EVENT_OPRTATOR=12, 
		ACHIEVEMENT_GOAL_OPERATOR=13, TEST_GOAL_OPERATOR=14, ATOM=15, VARIABLE=16, 
		NUMBER=17, WHITESPACE=18, NEWLINE=19, DECIMAL=20, LPAREN=21, RPAREN=22, 
		AND=23, OR=24, LESS_THAN=25, LESS_EQUALS=26, GREATER_THAN=27, GREATER_EQUALS=28, 
		STRONG_NEGATION=29, NEGATION_AS_FAILURE=30, EQUALS=31, NOT_EQUALS=32, 
		Comment=33;
	public static final int
		RULE_uncertainAgentspeak = 0, RULE_init_bels = 1, RULE_probabilistic_bel = 2, 
		RULE_possibilistic_bel = 3, RULE_init_goals = 4, RULE_plans = 5, RULE_plan = 6, 
		RULE_event = 7, RULE_belief_event_trigger = 8, RULE_goal_event_trigger = 9, 
		RULE_add_goal_event_trigger = 10, RULE_delete_goal_event_trigger = 11, 
		RULE_goal = 12, RULE_achievement_goal = 13, RULE_test_goal = 14, RULE_tautology = 15, 
		RULE_context = 16, RULE_log_expr = 17, RULE_and_expr = 18, RULE_or_expr = 19, 
		RULE_less_than_expr = 20, RULE_less_equals_expr = 21, RULE_greater_than_expr = 22, 
		RULE_greater_equals_expr = 23, RULE_equals_expr = 24, RULE_not_equals_expr = 25, 
		RULE_negation_expr = 26, RULE_belief_atom_expr = 27, RULE_body = 28, RULE_body_statement = 29, 
		RULE_belief_action = 30, RULE_environment_action = 31, RULE_belief_literal = 32, 
		RULE_positive_literal = 33, RULE_negative_literal = 34, RULE_belief_atom = 35, 
		RULE_term = 36, RULE_constant = 37, RULE_atom = 38, RULE_number = 39, 
		RULE_intNum = 40, RULE_doubleNum = 41, RULE_variable = 42, RULE_arguments_list = 43, 
		RULE_structure = 44;
	public static final String[] ruleNames = {
		"uncertainAgentspeak", "init_bels", "probabilistic_bel", "possibilistic_bel", 
		"init_goals", "plans", "plan", "event", "belief_event_trigger", "goal_event_trigger", 
		"add_goal_event_trigger", "delete_goal_event_trigger", "goal", "achievement_goal", 
		"test_goal", "tautology", "context", "log_expr", "and_expr", "or_expr", 
		"less_than_expr", "less_equals_expr", "greater_than_expr", "greater_equals_expr", 
		"equals_expr", "not_equals_expr", "negation_expr", "belief_atom_expr", 
		"body", "body_statement", "belief_action", "environment_action", "belief_literal", 
		"positive_literal", "negative_literal", "belief_atom", "term", "constant", 
		"atom", "number", "intNum", "doubleNum", "variable", "arguments_list", 
		"structure"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'Prob('", "','", "'Pos('", "'*('", "'true'", "';'", null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'('", "')'", "'&&'", "'||'", "'<'", "'=<'", "'>'", "'>='", "'~'", "'not'", 
		"'=='", "'\\=='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, "CONTEXT", "ACTIONS", 
		"ACTION_SEPERATOR", "ADD_EVENT_OPRTATOR", "DELETE_EVENT_OPRTATOR", "ACHIEVEMENT_GOAL_OPERATOR", 
		"TEST_GOAL_OPERATOR", "ATOM", "VARIABLE", "NUMBER", "WHITESPACE", "NEWLINE", 
		"DECIMAL", "LPAREN", "RPAREN", "AND", "OR", "LESS_THAN", "LESS_EQUALS", 
		"GREATER_THAN", "GREATER_EQUALS", "STRONG_NEGATION", "NEGATION_AS_FAILURE", 
		"EQUALS", "NOT_EQUALS", "Comment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UncertainAgentspeak.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UncertainAgentspeakParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class UncertainAgentspeakContext extends ParserRuleContext {
		public Init_belsContext init_bels() {
			return getRuleContext(Init_belsContext.class,0);
		}
		public Init_goalsContext init_goals() {
			return getRuleContext(Init_goalsContext.class,0);
		}
		public PlansContext plans() {
			return getRuleContext(PlansContext.class,0);
		}
		public TerminalNode EOF() { return getToken(UncertainAgentspeakParser.EOF, 0); }
		public UncertainAgentspeakContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uncertainAgentspeak; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).enterUncertainAgentspeak(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).exitUncertainAgentspeak(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UncertainAgentspeakVisitor ) return ((UncertainAgentspeakVisitor<? extends T>)visitor).visitUncertainAgentspeak(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UncertainAgentspeakContext uncertainAgentspeak() throws RecognitionException {
		UncertainAgentspeakContext _localctx = new UncertainAgentspeakContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_uncertainAgentspeak);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			init_bels();
			setState(91);
			init_goals();
			setState(92);
			plans();
			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Init_belsContext extends ParserRuleContext {
		public List<Probabilistic_belContext> probabilistic_bel() {
			return getRuleContexts(Probabilistic_belContext.class);
		}
		public Probabilistic_belContext probabilistic_bel(int i) {
			return getRuleContext(Probabilistic_belContext.class,i);
		}
		public List<Possibilistic_belContext> possibilistic_bel() {
			return getRuleContexts(Possibilistic_belContext.class);
		}
		public Possibilistic_belContext possibilistic_bel(int i) {
			return getRuleContext(Possibilistic_belContext.class,i);
		}
		public List<Belief_atomContext> belief_atom() {
			return getRuleContexts(Belief_atomContext.class);
		}
		public Belief_atomContext belief_atom(int i) {
			return getRuleContext(Belief_atomContext.class,i);
		}
		public Init_belsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init_bels; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).enterInit_bels(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).exitInit_bels(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UncertainAgentspeakVisitor ) return ((UncertainAgentspeakVisitor<? extends T>)visitor).visitInit_bels(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Init_belsContext init_bels() throws RecognitionException {
		Init_belsContext _localctx = new Init_belsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_init_bels);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << ATOM) | (1L << VARIABLE) | (1L << NUMBER) | (1L << DECIMAL))) != 0)) {
				{
				setState(104);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__1:
					{
					setState(95);
					probabilistic_bel();
					setState(96);
					match(T__0);
					}
					break;
				case T__3:
					{
					setState(98);
					possibilistic_bel();
					setState(99);
					match(T__0);
					}
					break;
				case ATOM:
				case VARIABLE:
				case NUMBER:
				case DECIMAL:
					{
					setState(101);
					belief_atom();
					setState(102);
					match(T__0);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Probabilistic_belContext extends ParserRuleContext {
		public List<Belief_literalContext> belief_literal() {
			return getRuleContexts(Belief_literalContext.class);
		}
		public Belief_literalContext belief_literal(int i) {
			return getRuleContext(Belief_literalContext.class,i);
		}
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public Probabilistic_belContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_probabilistic_bel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).enterProbabilistic_bel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).exitProbabilistic_bel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UncertainAgentspeakVisitor ) return ((UncertainAgentspeakVisitor<? extends T>)visitor).visitProbabilistic_bel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Probabilistic_belContext probabilistic_bel() throws RecognitionException {
		Probabilistic_belContext _localctx = new Probabilistic_belContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_probabilistic_bel);
		int _la;
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(T__1);
				setState(110);
				match(LPAREN);
				setState(111);
				belief_literal();
				setState(112);
				match(T__2);
				setState(113);
				number();
				setState(114);
				match(RPAREN);
				setState(115);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(T__1);
				setState(118);
				match(LPAREN);
				setState(119);
				belief_literal();
				setState(120);
				match(T__2);
				setState(121);
				number();
				setState(122);
				match(RPAREN);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(123);
					match(T__2);
					setState(124);
					match(LPAREN);
					setState(125);
					belief_literal();
					setState(126);
					match(T__2);
					setState(127);
					number();
					setState(128);
					match(RPAREN);
					}
					}
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(135);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Possibilistic_belContext extends ParserRuleContext {
		public List<Belief_literalContext> belief_literal() {
			return getRuleContexts(Belief_literalContext.class);
		}
		public Belief_literalContext belief_literal(int i) {
			return getRuleContext(Belief_literalContext.class,i);
		}
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public Possibilistic_belContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_possibilistic_bel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).enterPossibilistic_bel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).exitPossibilistic_bel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UncertainAgentspeakVisitor ) return ((UncertainAgentspeakVisitor<? extends T>)visitor).visitPossibilistic_bel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Possibilistic_belContext possibilistic_bel() throws RecognitionException {
		Possibilistic_belContext _localctx = new Possibilistic_belContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_possibilistic_bel);
		int _la;
		try {
			setState(167);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(T__3);
				setState(140);
				match(LPAREN);
				setState(141);
				belief_literal();
				setState(142);
				match(T__2);
				setState(143);
				number();
				setState(144);
				match(RPAREN);
				setState(145);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				match(T__3);
				setState(148);
				match(LPAREN);
				setState(149);
				belief_literal();
				setState(150);
				match(T__2);
				setState(151);
				number();
				setState(152);
				match(RPAREN);
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(153);
					match(T__2);
					setState(154);
					match(LPAREN);
					setState(155);
					belief_literal();
					setState(156);
					match(T__2);
					setState(157);
					number();
					setState(158);
					match(RPAREN);
					}
					}
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(165);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Init_goalsContext extends ParserRuleContext {
		public List<Achievement_goalContext> achievement_goal() {
			return getRuleContexts(Achievement_goalContext.class);
		}
		public Achievement_goalContext achievement_goal(int i) {
			return getRuleContext(Achievement_goalContext.class,i);
		}
		public Init_goalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init_goals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).enterInit_goals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).exitInit_goals(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UncertainAgentspeakVisitor ) return ((UncertainAgentspeakVisitor<? extends T>)visitor).visitInit_goals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Init_goalsContext init_goals() throws RecognitionException {
		Init_goalsContext _localctx = new Init_goalsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_init_goals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ACHIEVEMENT_GOAL_OPERATOR) {
				{
				{
				setState(169);
				achievement_goal();
				setState(170);
				match(T__0);
				}
				}
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlansContext extends ParserRuleContext {
		public List<PlanContext> plan() {
			return getRuleContexts(PlanContext.class);
		}
		public PlanContext plan(int i) {
			return getRuleContext(PlanContext.class,i);
		}
		public PlansContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plans; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).enterPlans(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).exitPlans(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UncertainAgentspeakVisitor ) return ((UncertainAgentspeakVisitor<? extends T>)visitor).visitPlans(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlansContext plans() throws RecognitionException {
		PlansContext _localctx = new PlansContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_plans);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << ADD_EVENT_OPRTATOR) | (1L << DELETE_EVENT_OPRTATOR))) != 0)) {
				{
				{
				setState(177);
				plan();
				}
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlanContext extends ParserRuleContext {
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public TerminalNode CONTEXT() { return getToken(UncertainAgentspeakParser.CONTEXT, 0); }
		public ContextContext context() {
			return getRuleContext(ContextContext.class,0);
		}
		public TerminalNode ACTIONS() { return getToken(UncertainAgentspeakParser.ACTIONS, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public PlanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plan; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).enterPlan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UncertainAgentspeakListener ) ((UncertainAgentspeakListener)listener).exitPlan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UncertainAgentspeakVisitor ) return ((UncertainAgentspeakVisitor<? extends T>)visitor).visitPlan(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlanContext plan() throws RecognitionException {
		PlanContext _localctx = new PlanContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_plan);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			event();
			setState(184);
			match(CONTEXT);
			setState(185);
			context();
			setState(186);
			match(ACTIONS);
			setState(187);
			body();
			setState(188);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
